trend stoploss bug fixed